# cmake_test

./: .gitignore  CMakeLists.txt  clean.bat  cmake_clear.bat
shf/: CMakeLists.txt  config.h  config.h.in  main.cpp
